--- a/NixHaskellIndex.cabal
+++ b/NixHaskellIndex.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               ema-template
+name:               NixHaskellIndex
 version:            0.1.0.0
 license:            AGPL-3.0-only
 copyright:          2022 Sridhar Ratnakumar
@@ -20,7 +20,7 @@ extra-source-files:
   LICENSE
   README.md
 
-executable ema-template
+executable NixHaskellIndex
   build-depends:
     , aeson
     , async
