--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Build sources 🔧
         run: |
           nix build -j 4
+          nix build -j 4 .#data -o data
       - name: Generate HTML 🔧
         run: |
           mkdir ./output
