--- a/NixHaskellIndex.cabal
+++ b/NixHaskellIndex.cabal
@@ -98,5 +98,8 @@ executable NixHaskellIndex
     ViewPatterns
 
   main-is:            Main.hs
+  other-modules:
+    NHI.Types
+
   hs-source-dirs:     src
   default-language:   Haskell2010
