--- a/NixHaskellIndex.cabal
+++ b/NixHaskellIndex.cabal
@@ -99,7 +99,10 @@ executable NixHaskellIndex
 
   main-is:            Main.hs
   other-modules:
+    NHI.Route
+    NHI.Site
     NHI.Types
+    NHI.View
 
   hs-source-dirs:     src
   default-language:   Haskell2010
