--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.system }}
     strategy:
       matrix:
-        system: [x86_64-linux, aarch64-darwin, x86_64-darwin]
+        system: [x86_64-linux, aarch64-darwin]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
